# QuantumIntro

./: .gitignore  Industry Talk.odt  Quantum Day v0.1.odt  README.md  figures.py  pyproject.toml  requirements.txt
Notebooks/: circuits.ipynb  figures.ipynb  qiskit.ipynb
Notebooks/questions/: bell.json
admin/: Invoice 1.docx  Invoice 2.docx
tex/: beamer.aux  beamer.fdb_latexmk  beamer.fls  beamer.nav  beamer.tex  diagrams.dvi  diagrams.fdb_latexmk  diagrams.fls  diagrams.tex  equations.dvi  equations.fdb_latexmk  equations.fls  equations.tex
