[tool.poetry]
name = "intro to quantum computing"
version = "0.1.0"
description = ""
authors = ["Michael Williams <ucapiwi@ucl.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
qiskit = "^0.43.2"
ipykernel = "^6.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
